December 2021 7.8
  - Restyling of LAM
  - Do not print random password if sent via email (165)
  - Device: allow multiple cn values


30.09.2021 7.7
  - 2-factor authentication with OpenID
  - Send proper response code on failed login
  - LAM Pro:
   -> OpenLDAP 2FA support for TOTP
  ->Fixed bugs:
   -> Issues with list filter if only one result is found (241)
   -> Allow to sync empty list of groups in group of names user module (242)
   -> Windows lockout duration and password maximum age computed incorrectly
   -> Wrong status for nsAccountLock (245)


05.07.2021 7.6
  - Allow to store whole LAM configuration in MySQL database
  - Docker: new options for configuration location and LAM Pro license
  - Full PHP 8 compatibility
  - Replaced tree view and moved it to tools menu
  - Wildcards in edit screen support lower-case mode (e.g. "$_firstname")
  - Windows: more fields can be hidden
  - LAM Pro:
   -> Export/Import of cron jobs
   -> Mail server encryption type can be configured (TLS/SSL/none)
   -> User self registration: support to define uid field to use constant or custom validation
   -> Group of names user module: allow to sync memberships from other user
   -> Custom fields:
    * Support password change dialog in user edit view
    * Added date and email validation for text fields
    * Support password reset page for password fields
    * New field types: LDAP date, LDAP date and time
   -> Password self reset: fields on first page can be prefilled by URL parameter
  - Fixed bugs:
   -> Truncated mail text field in "LAM Pro password mail settings" and 2FA base URLs
   -> 389ds: support password change and force password in one save action


30.03.2021 7.5
  - PHP 7.3 required
  - PHP 8.0 compatibility (except tree view)
  - Support copying LDAP entries from account list
  - Account/PDF profiles: management of global templates and logos
  - Group of names: allow filter by member/owner (#151)
  - General information: link to groups (#152)
  - LAM Pro: